--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "mafia-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://aleksandracyp.github.io/mafia-frontend",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
     "purecss": "^2.0.6",
     "react": "^17.0.2",
@@ -17,6 +19,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
